--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
       --bg2: #120907;
 
       /* Raster/Board */
-      --cell-gap: clamp(5px, 1.1vmin, 10px);      /* Abstand zwischen den 8×8 Feldern */
-      --cell-radius: clamp(6px, 1.1vmin, 12px);   /* Rundung der einzelnen Rand-Kacheln */
+      --cell-gap: clamp(5px, 1.1vmin, 10px);
+      --cell-radius: clamp(6px, 1.1vmin, 12px);
 
-      /* Boxboden (große Innenfläche) */
-      --floor: #e8dcc6;         /* etwas dunkler als vorher, “Tiefe” */
-      --floor-edge: #5a3a2a;    /* dunkler Brauneinfassung (für Würfel-Rahmen etc.) */
+      /* Boxboden */
+      --floor: #e8dcc6;
+      --floor-edge: #5a3a2a;
 
-      /* Würfel (symbolisiert) */
-      --cube-fill: #ead7be;     /* leicht anders als Boden */
+      /* Würfel */
+      --cube-fill: #ead7be;
       --cube-border: #7a4a34;
 
       /* Steckfelder-Outline */
@@ -45,41 +45,24 @@
       font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
     }
 
-    /* Board-Zone: Schwerpunkt über der Mitte */
+    /* Board-Zone */
     .stage{
       width: min(94vw, 680px);
-      margin-top: 14vh;     /* über der Mitte, nicht “ganz oben” */
+      margin-top: 14vh;
       display:flex;
       justify-content:center;
+      align-items:flex-start; /* wichtig: nicht vertikal strecken */
     }
 
-    /* ===========================
-       FIX: Board IMMER quadratisch
-       =========================== */
+    /* ✅ Board: Breite fix, Höhe wird per JS exakt auf Breite gesetzt */
     .board{
       position:relative;
       width: 100%;
-      max-width: 100%;
-      aspect-ratio: 1 / 1; /* moderne Browser */
+      height: 0;           /* wird gleich per JS gesetzt */
+      overflow: visible;
     }
 
-    /* Fallback, falls aspect-ratio nicht greift */
-    @supports not (aspect-ratio: 1 / 1){
-      .board{
-        height:auto;
-      }
-      .board::before{
-        content:"";
-        display:block;
-        padding-top:100%; /* Höhe = Breite => Quadrat */
-      }
-      .board > *{
-        position:absolute;
-        inset:0;
-      }
-    }
-
-    /* 8×8 Raster als Basis */
+    /* 8×8 Raster */
     .grid{
       position:absolute;
       inset:0;
@@ -90,8 +73,8 @@
     }
 
     .cell{
-      background:#0b0b0b;                 /* “schwarz” */
-      border-radius: var(--cell-radius);  /* Randkacheln weich */
+      background:#0b0b0b;
+      border-radius: var(--cell-radius);
       box-shadow:
         0 0 0 1px rgba(255,255,255,0.03) inset,
         0 10px 18px rgba(0,0,0,0.35);
@@ -103,39 +86,30 @@
     .c-violett{ background: var(--violett); }
     .c-blau  { background: var(--blau);   }
 
-    /* ===========================================
-       BOXBODEN (große Innenfläche)
-       -> SHARPKANTIG, keine Radien
-       =========================================== */
+    /* BOXBODEN: scharfkantig */
     .floor{
       position:absolute;
-      /* Innenfläche = alles ohne Rand: Reihen 2..7 & Spalten B..G */
       left: calc((100% - 7 * var(--cell-gap)) / 8 + var(--cell-gap));
       top:  calc((100% - 7 * var(--cell-gap)) / 8 + var(--cell-gap));
       width: calc(6 * (100% - 7 * var(--cell-gap)) / 8 + 5 * var(--cell-gap));
       height: calc(6 * (100% - 7 * var(--cell-gap)) / 8 + 5 * var(--cell-gap));
 
       background: var(--floor);
-      border-radius: 0; /* scharfkantig */
+      border-radius: 0;
       box-shadow:
         0 18px 28px rgba(0,0,0,0.35),
         0 0 0 1px rgba(0,0,0,0.12) inset;
       z-index: 2;
     }
 
-    /* ===========================================
-       WÜRFEL (symbolisiert) – DARF Radien haben
-       -> 3×3 Bereich: 2B..4D
-       =========================================== */
+    /* WÜRFEL */
     .cube{
       position:absolute;
       z-index: 5;
 
-      /* Start bei Zelle B2 */
       left: calc((100% - 7 * var(--cell-gap)) / 8 + var(--cell-gap));
       top:  calc((100% - 7 * var(--cell-gap)) / 8 + var(--cell-gap));
 
-      /* Größe = 3 Zellen breit/hoch + 2 gaps */
       width: calc(3 * (100% - 7 * var(--cell-gap)) / 8 + 2 * var(--cell-gap));
       height: calc(3 * (100% - 7 * var(--cell-gap)) / 8 + 2 * var(--cell-gap));
 
@@ -147,7 +121,6 @@
         0 0 0 1px rgba(255,255,255,0.12) inset;
     }
 
-    /* 4 Steckfelder im Würfel (Outline) */
     .slots{
       position:absolute;
       inset: 0;
@@ -165,7 +138,6 @@
       border-radius: 10px;
     }
 
-    /* Slot-Positionen */
     .s-2c{ grid-row:1; grid-column:2; }
     .s-2d{ grid-row:1; grid-column:3; }
     .s-3b{ grid-row:2; grid-column:1; }
@@ -175,14 +147,10 @@
 
 <body>
   <div class="stage">
-    <div class="board">
-      <!-- große, scharfkantige Bodenfläche -->
+    <div class="board" id="board">
       <div class="floor" aria-hidden="true"></div>
-
-      <!-- 8×8 Raster (Rand + farbige Felder) -->
       <div id="grid" class="grid" aria-label="8×8 Raster"></div>
 
-      <!-- symbolisierter Würfel (darf Radien haben) -->
       <div class="cube" aria-label="Würfel">
         <div class="slots" aria-hidden="true">
           <div class="slot s-2c"></div>
@@ -195,14 +163,34 @@
   </div>
 
   <script>
-    // Hilfsfunktionen
-    const cols = ["A","B","C","D","E","F","G","H"];
+    // ======= Quadrat erzwingen (Höhe = Breite) =======
+    const boardEl = document.getElementById("board");
 
-    function key(r, cLetter){
-      return `${r}${cLetter}`;
+    function setBoardSquare(){
+      // tatsächliche Breite in px messen (stabiler als offsetWidth in manchen Layouts)
+      const w = Math.round(boardEl.getBoundingClientRect().width);
+      boardEl.style.height = w + "px";
     }
 
-    // Deine Farbfelder
+    // Beim Laden + nach Layout-Fertigstellung + bei Resize/Rotate
+    window.addEventListener("load", () => {
+      setBoardSquare();
+      // zweite Runde nach einem Frame (manche Browser setzen Breite erst dann korrekt)
+      requestAnimationFrame(setBoardSquare);
+      setTimeout(setBoardSquare, 80);
+    });
+
+    window.addEventListener("resize", () => {
+      setBoardSquare();
+      requestAnimationFrame(setBoardSquare);
+    });
+
+    // ======= Raster bauen =======
+    const cols = ["A","B","C","D","E","F","G","H"];
+    const grid = document.getElementById("grid");
+
+    function key(r, cLetter){ return `${r}${cLetter}`; }
+
     const colorMap = new Map([
       [key(3,"A"), "c-orange"],
       [key(4,"A"), "c-gruen"],
@@ -224,9 +212,6 @@
       [key(1,"D"), "c-blau"],
       [key(1,"C"), "c-violett"],
     ]);
-
-    // Raster bauen
-    const grid = document.getElementById("grid");
 
     for(let r=1; r<=8; r++){
       for(let c=0; c<8; c++){
