--- a/index.html
+++ b/index.html
@@ -13,19 +13,18 @@
       --gruen:   rgb(0, 166, 82);
       --orange:  rgb(249, 150, 30);
 
-      /* Grundlook (Fairy KIPP) */
-      --bg1: #2a1710;
-      --bg2: #120907;
+      /* Hintergrund (heller als vorher, aber weiterhin „braun-schwarz“) */
+      --bg1: #3a231a;
+      --bg2: #1b0f0c;
 
       /* Raster/Board */
       --cell-gap: clamp(5px, 1.1vmin, 10px);
       --cell-radius: clamp(6px, 1.1vmin, 12px);
 
-      /* Boxboden */
-      --floor: #e8dcc6;
-      --floor-edge: #5a3a2a;
+      /* Floor (großes Quadrat) soll dunkler sein als Cube */
+      --floor: #d8c8ad;
 
-      /* Würfel */
+      /* Würfel (kleineres Quadrat) heller */
       --cube-fill: #ead7be;
       --cube-border: #7a4a34;
 
@@ -39,26 +38,29 @@
       margin:0;
       display:flex;
       justify-content:center;
-      background: radial-gradient(ellipse at top, rgba(255,255,255,0.06), transparent 45%),
-                  radial-gradient(ellipse at bottom, rgba(0,0,0,0.55), transparent 55%),
-                  linear-gradient(180deg, var(--bg1), var(--bg2));
+
+      /* Hintergrund: heller, mehr „Ambient Light“ */
+      background:
+        radial-gradient(ellipse at top left, rgba(255,255,255,0.10), transparent 50%),
+        radial-gradient(ellipse at bottom, rgba(0,0,0,0.35), transparent 60%),
+        linear-gradient(180deg, var(--bg1), var(--bg2));
+
       font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
     }
 
-    /* Board-Zone */
     .stage{
       width: min(94vw, 680px);
       margin-top: 14vh;
       display:flex;
       justify-content:center;
-      align-items:flex-start; /* wichtig: nicht vertikal strecken */
+      align-items:flex-start;
     }
 
-    /* ✅ Board: Breite fix, Höhe wird per JS exakt auf Breite gesetzt */
+    /* Board: Breite fix, Höhe wird per JS exakt auf Breite gesetzt */
     .board{
       position:relative;
       width: 100%;
-      height: 0;           /* wird gleich per JS gesetzt */
+      height: 0;           /* wird per JS gesetzt */
       overflow: visible;
     }
 
@@ -76,8 +78,8 @@
       background:#0b0b0b;
       border-radius: var(--cell-radius);
       box-shadow:
-        0 0 0 1px rgba(255,255,255,0.03) inset,
-        0 10px 18px rgba(0,0,0,0.35);
+        0 0 0 1px rgba(255,255,255,0.035) inset,
+        0 10px 18px rgba(0,0,0,0.32);
     }
 
     /* farbige Randfelder */
@@ -86,23 +88,36 @@
     .c-violett{ background: var(--violett); }
     .c-blau  { background: var(--blau);   }
 
-    /* BOXBODEN: scharfkantig */
+    /* ===========================================
+       FLOOR: dunkler + Innenschatten (Licht links oben)
+       - kein Außenschatten
+       =========================================== */
     .floor{
       position:absolute;
+
       left: calc((100% - 7 * var(--cell-gap)) / 8 + var(--cell-gap));
       top:  calc((100% - 7 * var(--cell-gap)) / 8 + var(--cell-gap));
       width: calc(6 * (100% - 7 * var(--cell-gap)) / 8 + 5 * var(--cell-gap));
       height: calc(6 * (100% - 7 * var(--cell-gap)) / 8 + 5 * var(--cell-gap));
 
-      background: var(--floor);
+      /* leichtes Licht von links oben ins Material */
+      background:
+        linear-gradient(135deg, rgba(255,255,255,0.18), rgba(0,0,0,0.06)),
+        var(--floor);
+
       border-radius: 0;
-      box-shadow:
-        0 18px 28px rgba(0,0,0,0.35),
-        0 0 0 1px rgba(0,0,0,0.12) inset;
       z-index: 2;
+
+      /* NUR Innenschatten (oben/links heller, unten/rechts dunkler) */
+      box-shadow:
+        inset 14px 14px 26px rgba(255,255,255,0.14),   /* Lichtkante */
+        inset -18px -18px 34px rgba(0,0,0,0.22),       /* Schattenkante */
+        inset 0 0 0 1px rgba(0,0,0,0.12);              /* feine Innenkante */
     }
 
-    /* WÜRFEL */
+    /* ===========================================
+       WÜRFEL: bleibt heller + leichter Außenschatten
+       =========================================== */
     .cube{
       position:absolute;
       z-index: 5;
@@ -113,12 +128,16 @@
       width: calc(3 * (100% - 7 * var(--cell-gap)) / 8 + 2 * var(--cell-gap));
       height: calc(3 * (100% - 7 * var(--cell-gap)) / 8 + 2 * var(--cell-gap));
 
-      background: var(--cube-fill);
+      background:
+        linear-gradient(135deg, rgba(255,255,255,0.22), rgba(0,0,0,0.06)),
+        var(--cube-fill);
+
       border: 4px solid var(--cube-border);
       border-radius: clamp(10px, 2.2vmin, 18px);
+
       box-shadow:
-        0 12px 22px rgba(0,0,0,0.30),
-        0 0 0 1px rgba(255,255,255,0.12) inset;
+        0 12px 22px rgba(0,0,0,0.28),
+        0 0 0 1px rgba(255,255,255,0.10) inset;
     }
 
     .slots{
@@ -167,15 +186,12 @@
     const boardEl = document.getElementById("board");
 
     function setBoardSquare(){
-      // tatsächliche Breite in px messen (stabiler als offsetWidth in manchen Layouts)
       const w = Math.round(boardEl.getBoundingClientRect().width);
       boardEl.style.height = w + "px";
     }
 
-    // Beim Laden + nach Layout-Fertigstellung + bei Resize/Rotate
     window.addEventListener("load", () => {
       setBoardSquare();
-      // zweite Runde nach einem Frame (manche Browser setzen Breite erst dann korrekt)
       requestAnimationFrame(setBoardSquare);
       setTimeout(setBoardSquare, 80);
     });
