--- a/index.html
+++ b/index.html
@@ -20,13 +20,19 @@
 
       --floor: #d8c8ad;
 
-      --cube-fill: #ead7be;
+      /* Rahmen-Braun ist super */
       --cube-border: #7a4a34;
+
+      /* Würfeloberfläche: dunkler + wärmer */
+      --cube-wood-base: #d7c2a4;  /* dunkler als vorher */
+      --cube-wood-deep: #c9b08f;  /* Schatten */
+      --cube-wood-warm: rgba(155, 70, 110, 0.10); /* Magenta-Hauch */
+      --cube-wood-gold: rgba(249, 150, 30, 0.10); /* Gelb/Orange-Hauch */
 
       /* Slot */
       --slot-border: rgba(0,0,0,0.55);
-      --slot-fill: var(--cube-fill);              /* <<< NEU: beige Füllung */
       --slot-border-w: 2px;
+      --slot-fill: #ead7be;
 
       --board-border: 4px;
       --board-border-color: #000;
@@ -126,9 +132,25 @@
       width: calc(3 * var(--cell) + 2 * var(--cell-gap));
       height: calc(3 * var(--cell) + 2 * var(--cell-gap));
 
+      /* Holz-Layer (subtil): Licht links oben, Schatten rechts unten,
+         + ganz feine "Maserung" via repeating-linear-gradient */
       background:
-        linear-gradient(135deg, rgba(255,255,255,0.22), rgba(0,0,0,0.06)),
-        var(--cube-fill);
+        /* leichter Gold/Magenta-Schimmer im Licht */
+        radial-gradient(120% 90% at 15% 15%, var(--cube-wood-gold), transparent 55%),
+        radial-gradient(120% 90% at 25% 25%, var(--cube-wood-warm), transparent 60%),
+
+        /* Maserung: sehr fein, nicht zu "stripy" */
+        repeating-linear-gradient(
+          20deg,
+          rgba(0,0,0,0.02) 0px,
+          rgba(0,0,0,0.02) 10px,
+          rgba(255,255,255,0.02) 10px,
+          rgba(255,255,255,0.02) 18px
+        ),
+
+        /* Materialverlauf */
+        linear-gradient(135deg, rgba(255,255,255,0.16), rgba(0,0,0,0.08)),
+        linear-gradient(180deg, var(--cube-wood-base), var(--cube-wood-deep));
 
       border: 4px solid var(--cube-border);
       border-radius: clamp(10px, 2.2vmin, 18px);
@@ -141,31 +163,32 @@
       pointer-events: none;
     }
 
-    /* >>> Slots: jetzt gefüllt + Ebene über Würfelrahmen <<< */
+    /* Slots: jetzt mit "aufgesetzt"-Schatten (unten/rechts) */
     .slot{
       position:absolute;
-
       width: var(--cell);
       height: var(--cell);
-
       box-sizing: border-box;
 
       background:
-        linear-gradient(135deg, rgba(255,255,255,0.12), rgba(0,0,0,0.04)),
-        var(--slot-fill);                 /* <<< NEU: beige Füllung */
+        linear-gradient(135deg, rgba(255,255,255,0.14), rgba(0,0,0,0.05)),
+        var(--slot-fill);
 
       border: var(--slot-border-w) solid var(--slot-border);
       border-radius: var(--cell-radius);
 
-      /* Ebene über Würfel */
-      z-index: 7;                         /* <<< höher als cube (5) */
+      z-index: 7;
       pointer-events: none;
 
+      /* Licht links oben → Schatten unten/rechts */
       box-shadow:
-        0 2px 6px rgba(0,0,0,0.18);       /* leicht abheben, sehr subtil */
+        1px 1px 0 rgba(255,255,255,0.18) inset,   /* Highlight oben/links */
+        -1px -1px 0 rgba(0,0,0,0.08) inset,       /* Gegenkante innen */
+        0 8px 14px rgba(0,0,0,0.28),              /* weicher Grundschatten */
+        6px 6px 10px rgba(0,0,0,0.22);            /* "Richtung" nach unten/rechts */
     }
 
-    /* Raster-Positionen */
+    /* Positionen (Rasterkoordinaten) */
     .slot-2c{ left: calc(2 * (var(--cell) + var(--cell-gap))); top:  calc(1 * (var(--cell) + var(--cell-gap))); }
     .slot-2d{ left: calc(3 * (var(--cell) + var(--cell-gap))); top:  calc(1 * (var(--cell) + var(--cell-gap))); }
     .slot-3b{ left: calc(1 * (var(--cell) + var(--cell-gap))); top:  calc(2 * (var(--cell) + var(--cell-gap))); }
@@ -182,7 +205,7 @@
 
       <div class="cube" aria-label="Würfel"></div>
 
-      <!-- Slots (Zahlen-Blöckchen) -->
+      <!-- Slots -->
       <div class="slot slot-2c" aria-label="Slot 2C"></div>
       <div class="slot slot-2d" aria-label="Slot 2D"></div>
       <div class="slot slot-3b" aria-label="Slot 3B"></div>
@@ -191,7 +214,7 @@
   </div>
 
   <script>
-    // ======= Quadrat erzwingen (Höhe = Breite) =======
+    // Quadrat erzwingen (Höhe = Breite)
     const boardEl = document.getElementById("board");
 
     function setBoardSquare(){
@@ -210,7 +233,7 @@
       requestAnimationFrame(setBoardSquare);
     });
 
-    // ======= Raster bauen =======
+    // Raster bauen
     const cols = ["A","B","C","D","E","F","G","H"];
     const grid = document.getElementById("grid");
 
